# sort_animals

./: Cargo.toml  README.md  data.json  result.json
animal/: Cargo.toml
animal/src/: lib.rs
animal_derive/: Cargo.toml
animal_derive/src/: lib.rs
src/: main.rs
