[package]
name = "sort_animals"
version = "0.1.0"
authors = ["Justin Smith <smithj@g.cofc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.17"
serde_json = "1.0.57"
animal = { path = './animal' }
