[package]
name = "animal"
version = "0.1.0"
authors = ["Justin Smith <smithj@g.cofc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typetag = "0.1.5"
serde = { version = "1.0.116", features = ['derive'] }
serde_json = "1.0.57"
animal_derive = { path = "../animal_derive" }